# hydra-battles

./: .depend  .gitignore  .gitmodules  .gitpod.yml  Deduction.v  LICENSE  LNN.v  LNN2LNT.v  LNT.v  Languages.v  ListExt.v  Make  Makefile  Makefile.coq.local  NN.v  NN2PA.v  NNtheory.v  PA.v  PAconsistent.v  PAtheory.v  PRrepresentable.v  README.md  _CoqProject  cPair.v  chRem.v  checkPrf.v  code.v  codeFreeVar.v  codeList.v  codePA.v  codeSubFormula.v  codeSubTerm.v  codeSysPrf.v  configure.sh  coq-ackermann.opam  coq-addition-chains.opam  coq-gaia-hydras.opam  coq-goedel.opam  coq-hydra-battles.opam  default.nix  (+26 more)
.github/workflows/: buid-documentation.yml  build-documentation.yml  build-pdf.yml  coq-ci.yml  docker-action.yml  docker-ci.yml  nix-action-default.yml
.nix/: config.nix  coq-nix-toolbox.nix  gitpod.Dockerfile  nixpkgs.nix
alectryon/: Makefile  README.md  first-steps.md
alectryon-cache/: Makefile
alectryon-html/: Makefile  README.md
doc/: .gitignore  Gamma0-chapter.tex  Makefile  Program_issue2.pyg  Program_issue2.tex  README.md  _region_.tex  chap-intro-goedel.tex  chapter-encoding.tex  chapter-epsilon0.tex  chapter-expressible.tex  chapter-fol.tex  chapter-hydras.tex  chapter-introduction.tex  chapter-lnn-lnt.tex  chapter-natural-deduction.tex  chapter-ordinals.tex  chapter-powers.tex  chapter-primrec.tex  chapter-schutte.tex  coqmacros.tex  epsilon0-chapter.tex  gaia-chapter.tex  hydra-chapter.tex  hydras.tex  ks-chapter.tex  large-sets-chapter.tex  ordinal-chapter.tex  part-hydras-intro.tex  part-hydras.tex  schutte-chapter.tex  thebib.bib  tuto-beamer.tex  tuto.tex
doc/JFLA2022/: Ex42a.tex  Ex42b.tex  Ex42c.tex  Ex42d.tex  Ex42e.tex  HprimeDef.tex  Makefile  README.md  SimpleMakefile  paper.bbl  paper.tex  pygments.sty
doc/cutting-table/: Ack_test.v  Readme.md  coqToLatex.py  jsonToLatex.py  montage1.py  requirements.txt  test.tex
doc/movies/: Issue_Program.v  Makefile  Readme.md  config.mk  driver.py  extract_snippets.py  gen_targets.py  requirements.txt
exercises/: README.md
exercises/ordinals/: F_3.v  F_omega.v  Limit_Infinity.v  T1_ltNotWf.v  ge_omega_iff.v  is_F_monotonous.v  lt_succ_le.v  predSuccUnicity.v  schutte_cnf_counter_example.v
exercises/primrec/: AckermannNotPR.v  FibonacciPR.v  MinPR.v  MorePRExamples.v  isqrt.v
latex/: Makefile  chapter-hydras.tex  chapter-introduction.tex  chapter-ks.tex  chapter-large-sets.tex  chapter-ordinals.tex  chapter-schutte.tex  chapter-skippable.tex  chapter-termination.tex  coqmacros.tex  hydras.tex  introduction.tex  thebib.bib
sphinx-alectryon/source/: chapter-powers.rst  chapter-primrec.rst  conf.py  hydras.rst  index.rst  issues.txt  on-hydras.rst  part-hydras.rst
src/: Makefile  dune  make_project
src/Epsilon0/: Canon.v  Demos.v  E0.v  Epsilon0.v  Epsilon0rpo.v  F_alpha.v  H_alpha.v  Hessenberg.v  L_alpha.v  L_alpha2.v  Large_Sets.v  Large_Sets_Examples.v  Paths.v  T1.v
src/Gamma0/: Gamma0.v  Gamma0_length.v  T2.v
src/Hydra/: Battle_length.v  BigBattle.v  Epsilon0_Needed_Free.v  Epsilon0_Needed_Generic.v  Epsilon0_Needed_Std.v  Hydra_Definitions.v  Hydra_Examples.v  Hydra_Extraction.v  Hydra_Lemmas.v  Hydra_Termination.v  Hydra_Theorems.v  KP_example.v  O2H.v  Omega2_Small.v  Omega_Small.v
src/OmegaOmega/: Examples.v  ListOmega.v  OO.v  listordi.v
src/OrdinalNotations/: Definitions.v  Example_3PlusOmega.v  Exercise.v  Finite_ordinals.v  Generic.v  ON_Finite.v  ON_Omega.v  ON_Omega2.v  ON_Omega_plus_omega.v  ON_plus.v  Omega2.v  Omega_ON.v  Omega_ordinal.v  Omega_plus_omega.v  bugreport.v
src/Prelude/: Arith_lemmas.v  DecPreOrder.v  DecPreOrder_Instances.v  Exp2.v  Finite_ordinals.v  First_toggle.v  Iterates.v  Limits_and_Successors.v  Merge_Sort.v  MoreLists.v  MoreOrders.v  More_Arith.v  Omega2.v  Omega_ordinal.v  Omega_plus_omega.v  OrdNotations.v  Ordinal_generic.v  Restriction.v  Simple_LexProd.v  Sort_spec.v  WfVariant.v  not_decreasing.v
src/Schutte/: AP.v  Addition.v  CNF.v  Correctness_E0.v  Countable.v  Critical.v  Denumerable.v  GRelations.v  Injection_from_T1.v  Lub.v  MoreEpsilonIota.v  Ordering_Functions.v  PartialFun.v  Schutte.v  Schutte_basics.v  Well_Orders.v
src/rpo/: closure.v  decidable_set.v  (+6 more)
theories/: Deduction.v  NN2PA.v  PrimRecExamples.v  chRem.v  goedel2.v  primRec.v
(+557 files in other folders)
