opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/hydra-battles"
dev-repo: "git+https://github.com/coq-community/hydra-battles.git"
bug-reports: "https://github.com/coq-community/hydra-battles/issues"
license: "MIT"

synopsis: "Bridge in Coq between Gaia and Hydra battles"
description: """
The Gaia and Hydra battles projects develop different implementations
of ordinals and other mathematical concepts in Coq. This development bridges
similar concepts in the two projects."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.13" & < "8.15~") | (= "dev")}
  "coq-hydra-battles" {>= "0.4"}
  "coq-mathcomp-ssreflect" {(>= "1.12.0" & < "1.13~") | (= "dev")}
  "coq-mathcomp-zify"
  "coq-gaia" {(>= "1.12" & < "1.13~") | (= "dev")}
]

tags: [
  "category:Mathematics/Logic/Foundations"
  "keyword:ordinals"
  "logpath:gaia_hydras"
]
authors: [
  "Pierre Castéran"
]
