opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/hydra-battles"
dev-repo: "git+https://github.com/coq-community/hydra-battles.git"
bug-reports: "https://github.com/coq-community/hydra-battles/issues"
license: "MIT"

synopsis: "Bridge in Coq between Gaia and Hydra battles"
description: """
The Gaia and Hydra battles projects develop different implementations
of ordinals and other mathematical concepts in Coq. This development bridges
similar concepts in the two projects."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.13" & < "8.17~") | (= "dev")}
  "coq-hydra-battles" {= version}
  "coq-mathcomp-ssreflect" {(>= "1.13.0" & < "1.16~") | (= "dev")}
  "coq-mathcomp-zify"
  "coq-gaia-schutte" {(>= "1.14" & < "1.16~") | (= "dev")}
]

tags: [
  "category:Mathematics/Logic/Foundations"
  "keyword:ordinals"
  "logpath:gaia_hydras"
]
authors: [
  "Pierre Castéran"
]
